--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nguniversal/express-engine": "^9.1.1",
     "bootstrap": "^4.5.0",
     "express": "^4.15.2",
+    "lazysizes": "^5.2.2",
     "ngx-quicklink": "^0.2.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
